@@ -1,5 +1,11 @@
 2009-02-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
+	* xs/GtkIconView.xs: Fix stack handling bugs in
+	Gtk2::IconView::get_item_at_pos(), get_dest_item_at_pos(), and
+	get_tooltip_context().  Patch by Kevin Ryde.
+
+2009-02-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
 	* xs/GtkBindings.xs (gtk2perl_binding_set_get_type): To make the
 	doc generator happy, register our custom GtkBindingSet GType under
 	the name "GtkBindingSet".
